--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ Portolio
         
         <div class="col-4">
             <div class="portfolio-item"> 
-                <div class="portfolio-item__img"><img src="HTML/project_organica.jpg" alt="Макет Органика"></div>
-                 <div class="portfolio-item__title"><a href="work-organica.html">Макет органика</a></div>
+                <div class="portfolio-item__img"><img src="HTML/stringart.jpg" alt="String art"></div>
+                 <div class="portfolio-item__title"><a href="work-organica.html">String art</a></div>
                  <div class="portfolio-item__text"><p>Верстка одностраничного сайта по PSD макету</p></div>
             </div>
         </div>
