підключив в основу файл

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Portolio
         <div class="col-4">
             <div class="portfolio-item"> 
                 <div class="portfolio-item__img"><img src="HTML/stringart.jpg" alt="String art"></div>
-                 <div class="portfolio-item__title"><a href="work-organica.html">String art</a></div>
+                 <div class="portfolio-item__title"><a href="stringart.html">String art</a></div>
                  <div class="portfolio-item__text"><p>Верстка одностраничного сайта по PSD макету</p></div>
             </div>
         </div>
