--- a/stringart.html
+++ b/stringart.html
@@ -22,7 +22,7 @@
   <link href="lib/fancybox/fancybox.css" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 
   <!-- =======================================================
     Template Name: Studio
