--- a/stringart.html
+++ b/stringart.html
@@ -8,8 +8,8 @@
   <meta content="" name="description">
 
   <!-- Favicons -->
-  <link href="img/favicon.png" rel="icon">
-  <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="imgstringart/favicon.png" rel="icon">
+  <link href="imgstringart/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Oswald:400,300,700|Lato:400,700" rel="stylesheet">
@@ -70,7 +70,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 name">
-          <img class="img-responsive" src="img/pic.png">
+          <img class="img-responsive" src="imgstringart/pic.png">
           <p>DANIEL PRATT</p>
           <div class="name-label"></div>
         </div>
@@ -112,7 +112,7 @@
             <div class="project">
               <div class="photo-wrapper">
                 <div class="photo">
-                  <a class="fancybox" href="img/portfolio/port04.jpg"><img class="img-responsive" src="img/portfolio/port04.jpg" alt=""></a>
+                  <a class="fancybox" href="imgstringart/portfolio/port04.jpg"><img class="img-responsive" src="imgstringart/portfolio/port04.jpg" alt=""></a>
                 </div>
                 <div class="overlay"></div>
               </div>
@@ -126,7 +126,7 @@
             <div class="project">
               <div class="photo-wrapper">
                 <div class="photo">
-                  <a class="fancybox" href="img/portfolio/port05.jpg"><img class="img-responsive" src="img/portfolio/port05.jpg" alt=""></a>
+                  <a class="fancybox" href="imgstringart/portfolio/port05.jpg"><img class="img-responsive" src="imgstringart/portfolio/port05.jpg" alt=""></a>
                 </div>
                 <div class="overlay"></div>
               </div>
@@ -140,7 +140,7 @@
             <div class="project">
               <div class="photo-wrapper">
                 <div class="photo">
-                  <a class="fancybox" href="img/portfolio/port06.jpg"><img class="img-responsive" src="img/portfolio/port06.jpg" alt=""></a>
+                  <a class="fancybox" href="imgstringart/portfolio/port06.jpg"><img class="img-responsive" src="imgstringart/portfolio/port06.jpg" alt=""></a>
                 </div>
                 <div class="overlay"></div>
               </div>
@@ -157,7 +157,7 @@
             <div class="project">
               <div class="photo-wrapper">
                 <div class="photo">
-                  <a class="fancybox" href="img/portfolio/port01.jpg"><img class="img-responsive" src="img/portfolio/port01.jpg" alt=""></a>
+                  <a class="fancybox" href="imgstringart/portfolio/port01.jpg"><img class="img-responsive" src="imgstringart/portfolio/port01.jpg" alt=""></a>
                 </div>
                 <div class="overlay"></div>
               </div>
@@ -171,7 +171,7 @@
             <div class="project">
               <div class="photo-wrapper">
                 <div class="photo">
-                  <a class="fancybox" href="img/portfolio/port02.jpg"><img class="img-responsive" src="img/portfolio/port02.jpg" alt=""></a>
+                  <a class="fancybox" href="imgstringart/portfolio/port02.jpg"><img class="img-responsive" src="imgstringart/portfolio/port02.jpg" alt=""></a>
                 </div>
                 <div class="overlay"></div>
               </div>
@@ -185,7 +185,7 @@
             <div class="project">
               <div class="photo-wrapper">
                 <div class="photo">
-                  <a class="fancybox" href="img/portfolio/port03.jpg"><img class="img-responsive" src="img/portfolio/port03.jpg" alt=""></a>
+                  <a class="fancybox" href="imgstringart/portfolio/port03.jpg"><img class="img-responsive" src="imgstringart/portfolio/port03.jpg" alt=""></a>
                 </div>
                 <div class="overlay"></div>
               </div>
@@ -296,7 +296,7 @@
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
                   book.
                 </p>
-                <p><img class="img-circle" src="img/pic-t1.jpg" width="80"></p>
+                <p><img class="img-circle" src="imgstringart/pic-t1.jpg" width="80"></p>
               </div>
 
               <div class="item mb centered">
@@ -304,7 +304,7 @@
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
                   book.
                 </p>
-                <p><img class="img-circle" src="img/pic-t2.jpg" width="80"></p>
+                <p><img class="img-circle" src="imgstringart/pic-t2.jpg" width="80"></p>
               </div>
 
               <div class="item mb centered">
@@ -312,7 +312,7 @@
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
                   book.
                 </p>
-                <p><img class="img-circle" src="img/pic-t3.jpg" width="80"></p>
+                <p><img class="img-circle" src="imgstringart/pic-t3.jpg" width="80"></p>
               </div>
 
             </div>
