--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Сайт портфолио</title>
     <!--Internet explover-->
-    <meta http-equiv="X-UA-Compatibe" content="IE=edge">
+    <meta charset="utf-8"> 
     <!-- Отображает страницу в маштабе 100%-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--  Нормализация стилей-->
