--- a/stringart.html
+++ b/stringart.html
@@ -22,7 +22,7 @@
   <link href="lib/fancybox/fancybox.css" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet" type="text/css">
 
   <!-- =======================================================
     Template Name: Studio
@@ -347,7 +347,7 @@
             <small>Tel. 9888-4394<br/>
 						Mail. hello@example.com<br/>
 						Skype. ExampleSkype
-					</p>
+                </p>
 
 				</div>
 
