трошки змінив сайт з стрінг артом

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Сайт портфолио</title>
+    <title>Сайт портфолио</title>  <title>String Art- yourString Art Your moral satisfaction with paintings full of minimalism</title> <!--titel-повиний бути як умога більшим щоб легше було найти-->
+
     <!--Internet explover-->
     <meta charset="utf-8"> 
     <!-- Отображает страницу в маштабе 100%-->
@@ -67,7 +68,7 @@ Portolio
         <div class="col-4">
             <div class="portfolio-item">
                 <div class="portfolio-item__img"><img src="HTML/project_portfolio.jpg" alt="Проект портфолио"></div>
-                 <div class=portfolio-item__title><a href="work-portfolio.html">Проект портфолио</a></div>
+                 <div class="portfolio-item__title"><a href="work-portfolio.html">Проект портфолио</a></div>
                  <div class="portfolio-item__text"><p>Верстка личного сайта портфолио на котором Вы сейчас находитесь</p></div>
             </div>
         </div>
