--- a/stringart.html
+++ b/stringart.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>Studio - Bootstrap Agency Template</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <title>String Art - Your moral satisfaction with paintings full of minimalism</title> <!--titel-повиний бути як умога більшим щоб легше було найти-->
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"><!--для мобыльних пристроъв маштаб шрифта-->
+  <meta content="String art" name="keywords"> <!--ключовы слова для пошуку-->
+  <meta content="" name="description">  <!--буде писати під заголовком в браузері тоже побільше слів-->
 
   <!-- Favicons -->
   <link href="imgstringart/favicon.png" rel="icon">
@@ -37,17 +37,17 @@
   <!-- Menu -->
   <nav class="menu" id="theMenu">
     <div class="menu-wrap">
-      <h1 class="logo"><a href="#home" class="smoothscroll">Studio</a></h1>
+      <h1 class="logo"><a href="#home" class="smoothscroll">String art</a></h1>
       <i class="fa fa-times menu-close"></i>
       <a href="#home" class="smoothscroll">Home</a>
       <a href="#about" class="smoothscroll">About</a>
       <a href="#portfolio" class="smoothscroll">Portfolio</a>
       <a href="#services" class="smoothscroll">Services</a>
       <a href="#contact" class="smoothscroll">Contact</a>
-      <a href="#"><i class="fa fa-facebook"></i></a>
-      <a href="#"><i class="fa fa-twitter"></i></a>
-      <a href="#"><i class="fa fa-dribbble"></i></a>
-      <a href="#"><i class="fa fa-envelope"></i></a>
+      
+      <a href="https://www.facebook.com/profile.php?id=100007390966444"><i class="fa fa-facebook"></i></a>
+      <a href="https://github.com/DenisChapaev"><i class="fa fa-github"></i></a>
+      <a href="https://www.instagram.com/dench4p4"><i class="fa fa-instagram"></i></a>
     </div>
 
     <!-- Menu button -->
@@ -59,7 +59,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-md-offset-3">
-          <h1>DESIGN STUDIO</h1>
+          <h1>STRING ART</h1>
         </div>
       </div>
     </div>
@@ -70,29 +70,23 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 name">
-          <img class="img-responsive" src="imgstringart/pic.png">
-          <p>DANIEL PRATT</p>
+          
+          <p>SPRINCHANU DENIS</p>
           <div class="name-label"></div>
         </div>
         <div class="col-lg-8 name-desc">
-          <h2>TALENTED DESIGNER & <br/>FRONT-END DEVELOPER <br/>ENJOYING THE BEAUTIFUL NYC</h2>
+          <h2>TALENTED GUITARIST & <br/>FRONT-END DEVELOPER <br/>ENJOYING THE BEAUTIFUL CHERNIVTSI</h2>
           <div class="name-zig"></div>
 
-          <div class="col-md-6">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
-              book.
-            </p>
-            <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently
-              with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+         <div class="col-md-6">
+        <p> String art («изонить») — одно из направлений в hand made творчестве, в основе которого гвозди и нити. String с английского переводится как струна или веревка, то есть String Art можно перевести с английского, как «искусство ниток, струн». </p>
+        <p>Доподлинно не известно, где впервые появился стринг арт как искусство, но корни его уходят в Англию XVII века. Затем в сороковых годах XIX века оно снова возродилось, но в модифицированной форме. Английская учительница математики Мэри Буль придумала оригинальный способ, как заинтересовать детей и вовлечь в изучение алгебры и геометрии. На деревянные досочки набивались гвозди для создания геометрических фигур.</p>
+         </div>
+         <div class="col-md-6">
+        <p>Начинания учителя геометрии продолжил американский дизайнер Джон Эихенгер. Он заинтересовался интересной техникой и начал создавать свои оригинальные картины. В своем творчестве Джон обратился к восточному искусству мандалы, заметив, что линии нитей, натянутые на гвозди, могут образовывать символические узоры. Первая работа калифорнийского дизайнера так и называлась «string mandala», то есть «мандала из нитей».</p>
+        <p>На деле String Art — это натягивание нитей между гвоздями, прибитыми на твёрдую поверхность. Для создания такой картины требуется: доска, нити, гвозди, молоток и зарисовка. В работе могут использоваться однотонные нитки, для получения монохромных изображений, а могут разноцветные нити для получения ярких композиций. String Art — это интересная и простая техника, которая не требует особых умений или приспособлений.</p>
+         </div>
           </div>
-          <div class="col-md-6">
-            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-            <p> Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered
-              the undoubtable source. </p>
-          </div>
-
-        </div>
-
       </div>
       <!-- /row -->
     </div>
@@ -292,25 +286,22 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
               <div class="item active mb centered">
-                <h3>MARK WEBBER</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
-                  book.
+                <h3>Констянтин Подольський</h3>
+                <p>Крутая работа очень удовлетворен результатом. Понравилось не только мне но и моим родителям. Буду заказовать больше так как дома много пустых стен под которие картины круто вписиваються
                 </p>
                 <p><img class="img-circle" src="imgstringart/pic-t1.jpg" width="80"></p>
               </div>
 
               <div class="item mb centered">
-                <h3>PAUL LEVINGSTON</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
-                  book.
+                <h3>Христина Марусяк</h3>
+                <p>Много думала брать или не брать пробывала сама но не получилось для дерева нужна мужская рука, ни когда не смогла б подумать что сделать картину с нитками и гвоздями на дереве есть столько нюансов. Но благодаря команде ребят с StringArt.ua мечта стала реальностю. 
                 </p>
                 <p><img class="img-circle" src="imgstringart/pic-t2.jpg" width="80"></p>
               </div>
 
               <div class="item mb centered">
-                <h3>LUCY LENNIN</h3>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
-                  book.
+                <h3>Анастасія Слобода</h3>
+                <p>Дуже захоплює коли такий подарунок дарують саме тобі адже він такий оригінальний, довговічний і завжди радує око коли приходиш додому, а саме головне нагадує про свято на яке його тобі подарували.
                 </p>
                 <p><img class="img-circle" src="imgstringart/pic-t3.jpg" width="80"></p>
               </div>
@@ -337,17 +328,17 @@
       <div class="row">
         <div class="col-lg-6">
           <p>CONTACT ME RIGHT NOW!</p>
-          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+          <p></p>
           <p>
-            <small>5th Avenue, 987<br/>
-						38399, New York,<br/>
-						USA.</small>
+            <small>Rudanskogo str. <br/>
+				 Chernivthi<br/>
+						Ukraine</small>
           </p>
           <p>
-            <small>Tel. 9888-4394<br/>
-						Mail. hello@example.com<br/>
-						Skype. ExampleSkype
-                </p>
+            <small>Tel. 0951646493<br/>
+						Mail. denchapaev.ua@gmail.com<br/>
+                Skype. denchik.chapaev</small>
+        </p>
 
 				</div>
 
