--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
   <script src="lib/stellar/stellar.min.js"></script>
   <script src="lib/fancybox/fancybox.js"></script>
 
-    
+   <script src="js.js"></script> 
+
+
 </head>
 
 <body>
